--- a/luci-app-zerotier/Makefile
+++ b/luci-app-zerotier/Makefile
@@ -5,15 +5,9 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI for Zerotier
-LUCI_DEPENDS:=+zerotier +jsonfilter +ucode
-LUCI_PKGARCH:=all
+LUCI_DEPENDS:=+zerotier
 
-define Package/luci-app-zerotier/conffiles
-/etc/config/zero/
-/etc/config/zerotier
-endef
-
-include $(TOPDIR)/feeds/luci/luci.mk
+include ../../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
 
