--- a/luci-app-zerotier/root/usr/share/luci/menu.d/luci-app-zerotier.json
+++ b/luci-app-zerotier/root/usr/share/luci/menu.d/luci-app-zerotier.json
@@ -10,12 +10,12 @@
 			"uci": { "zerotier": true }
 		}
 	},
-	"admin/network/zerotier/base": {
-		"title": "Base settings",
+	"admin/network/zerotier/config": {
+		"title": "Configuration",
 		"order": 10,
 		"action": {
 			"type": "view",
-			"path": "zerotier/base"
+			"path": "zerotier/config"
 		}
 	},
 	"admin/network/zerotier/interface": {
