--- a/luci-app-zerotier/root/usr/share/luci/menu.d/luci-app-zerotier.json
+++ b/luci-app-zerotier/root/usr/share/luci/menu.d/luci-app-zerotier.json
@@ -1,5 +1,5 @@
 {
-	"admin/network/zerotier": {
+	"admin/vpn/zerotier": {
 		"title": "ZeroTier",
 		"order": 90,
 		"action": {
@@ -10,7 +10,7 @@
 			"uci": { "zerotier": true }
 		}
 	},
-	"admin/network/zerotier/config": {
+	"admin/vpn/zerotier/config": {
 		"title": "Configuration",
 		"order": 10,
 		"action": {
@@ -18,7 +18,7 @@
 			"path": "zerotier/config"
 		}
 	},
-	"admin/network/zerotier/interface": {
+	"admin/vpn/zerotier/interface": {
 		"title": "Interface info",
 		"order": 20,
 		"action": {
